add trade module with tradeList; add api url to the dev environments and api service

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,10 @@
                 "plugin:@angular-eslint/template/process-inline-templates"
             ],
             "rules": {
+                "@typescript-eslint/naming-convention": [
+                    "error",
+                    { "selector": "typeLike", "format": ["camelCase", "UPPER_CASE", "PascalCase"] }
+                ],
                 "@angular-eslint/component-selector": [
                     "error",
                     {
