--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
   },
-  "editor.detectIndentation": false
+"editor.detectIndentation": false,
+"[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+}
 }
