--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
         "moment": "2.29.1",
         "ng-apexcharts": "1.5.12",
         "ngx-markdown": "12.0.1",
+        "ngx-perfect-scrollbar": "^10.1.1",
         "ngx-quill": "14.3.0",
-        "perfect-scrollbar": "1.5.2",
+        "perfect-scrollbar": "^1.5.5",
         "quill": "1.3.7",
         "rrule": "2.6.8",
         "rxjs": "6.6.7",
